apply changes to filmmaker.html and producer.html

--- a/filmmaker/filmmaker.html
+++ b/filmmaker/filmmaker.html
@@ -22,59 +22,14 @@
             <a href="../producer/producer.html"><h2>Продюсер</h2></a>
         </td>
         <td colspan="2" style="background-color: #ddd">
-            <h2>Фильмография</h2>
-
-            1. Мачете убивает вновь... В космосе! <br>
-            2. Кровный отец (2016)<br>
-            3. Неудержимые 3 (2014)<br>
-            4. Мачете убивает (2013)<br>
-            5. «Весёлые» каникулы (2011)<br>
-            6. Бобер (2010)<br>
-            7. Специальное коллекционное издание (сериал, 2010 – ...)<br>
-            8. Возмездие (2010)<br>
-            9. Настоящие дикари (сериал, 2004 – 2005)<br>
-            10. Поющий детектив (2003)<br>
-            11. Знаки (2002)<br>
-            12. Мы были солдатами (2002)<br>
-            13. The Quest for Captain Kidd (ТВ, 2001)<br>
-            14. Чего хотят женщины (2000)<br>
-            15. Патриот (2000)<br>
-            16. Побег из курятника (2000)<br>
-            17. Отель «Миллион долларов» (1999)<br>
-            18. Расплата (1999)<br>
-            19. Смертельное оружие 4 (1998)<br>
-            20. Теория заговора (1997)<br>
-            21. Выкуп (1996)<br>
-            22. Клуб «Чили Кон Карн» (1995)<br>
-            23. Покахонтас (1995)<br>
-            24. Храброе сердце (1995)<br>
-            25. Мэверик (1994)<br>
-            26. Человек без лица (1993)<br>
-            27. Вечно молодой (1992)<br>
-            28. Смертельное оружие 3 (1992)<br>
-            29. Гамлет (1990)<br>
-            30. Эйр Америка (1990)<br>
-            31. Птичка на проводе (1990)<br>
-            32. Создание фильма «Птичка на проводе» (1990)<br>
-            33. Симпсоны (сериал, 1989 – ...)<br>
-            34. Смертельное оружие 2 (1989)<br>
-            35. Пьяный рассвет (1988)<br>
-            36. Смертельное оружие (1987)<br>
-            37. Безумный Макс 3: Под куполом грома (1985)<br>
-            38. Миссис Соффел (1984)<br>
-            39. Река (1984)<br>
-            40. Баунти (1984)<br>
-            41. Год, опасный для жизни (1982)<br>
-            42. Штурмовой отряд Z (1982)<br>
-            43. Безумный Макс 2: Воин дороги (1981)<br>
-            44. Галлиполи (1981)<br>
-            45. Наказание (сериал, 1981)<br>
-            46. Тим (1979)<br>
-            47. Безумный Макс (1979)<br>
-            48. Герой (ТВ, 1979)<br>
-            49. Жаркое лето (1977)<br>
-            50. Семья Салливан (сериал, 1976 – 1983)<br>
-
+            <h2>Режиссура</h2>
+			<ul>
+				<li>1993 — Человек без лица (англ. Man Without a Face)</li>
+				<li>1995 — Храброе сердце (англ. Braveheart)</li>
+				<li>2004 — Страсти Христовы (англ. The Passion of the Christ)</li>
+				<li>2006 — Апокалипсис (англ. Apocalypto)</li>
+				<li>2016 — По соображениям совести (англ. Hacksaw Ridge)</li>
+			</ul>
         </td>
     </tr>
 
