--- a/actor/actor.html
+++ b/actor/actor.html
@@ -21,7 +21,7 @@
             <a href="../filmmaker/filmmaker.html"><h2>Режиссер</h2></a>
             <a href="../producer/producer.html"><h2>Продюсер</h2></a>
         </td>
-        <td colspan="2" style="background-color: #ddd">
+        <td style="background-color: #ddd">
             <h2>Фильмография</h2>
 
             1. Мачете убивает вновь... В космосе! <br>
@@ -79,7 +79,7 @@
     </tr>
 
     <tr>
-        <td colspan="3" style="background-color: #b5dcb3">
+        <td colspan="2" style="background-color: #b5dcb3">
             © Leonid Ignatov
         </td>
     </tr>
