--- a/task1_files/selectMenuItem.html
+++ b/task1_files/selectMenuItem.html
@@ -1,1 +1,9 @@
-Select Menu item
+<!DOCTYPE html>
+<html>
+<head>
+    <title>selectMenuItem</title>
+</head>
+<body>
+    Select Menu item
+</body>
+</html>
