--- a/Task_1.html
+++ b/Task_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="description" content="HTML Fundamentals, Task1">
-    <meta charset="windows-1251">
+    <meta charset="utf-8">
     <title>Task1</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
 
     <tr>
         <td colspan="2" style="background-color: #b5dcb3">
-            Copyright © 2015 You
+            Copyright В© 2015 You
         </td>
     </tr>
 </table>
