side menu changes

--- a/actor/actor.html
+++ b/actor/actor.html
@@ -16,12 +16,10 @@
 
 
     <tr>
-        <td style="background-color: #eee" width="100">
+        <td style="background-color: #eee" height="50" width="100">
             <a href="../Task_2.html"><h2>Главная</h2></a>
-            <a href="../filmmaker/filmmaker.html"><h2>Режиссер</h2></a>
-            <a href="../producer/producer.html"><h2>Продюсер</h2></a>
         </td>
-        <td style="background-color: #ddd">
+        <td rowspan="3" style="background-color: #ddd">
             <h2>Фильмография</h2>
 
             1. Мачете убивает вновь... В космосе! <br>
@@ -75,6 +73,18 @@
             49. Жаркое лето (1977)<br>
             50. Семья Салливан (сериал, 1976 – 1983)<br>
 
+        </td>
+    </tr>
+
+    <tr>
+        <td style="background-color: #eef" height="50" width="100">
+            <a href="../filmmaker/filmmaker.html"><h2>Режиссер</h2></a>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="background-color: #eee" width="100">
+            <a href="../producer/producer.html"><h2>Продюсер</h2></a>
         </td>
     </tr>
 
