--- a/filmmaker/filmmaker.html
+++ b/filmmaker/filmmaker.html
@@ -18,10 +18,8 @@
     <tr>
         <td style="background-color: #eee" width="100">
             <a href="../Task_2.html"><h2>Главная</h2></a>
-            <a href="../actor/actor.html"><h2>Актер</h2></a>
-            <a href="../producer/producer.html"><h2>Продюсер</h2></a>
         </td>
-        <td colspan="2" style="background-color: #ddd">
+        <td rowspan="3" style="background-color: #ddd">
             <h2>Режиссура</h2>
 			<ul>
 				<li>1993 — Человек без лица (англ. Man Without a Face)</li>
@@ -34,7 +32,19 @@
     </tr>
 
     <tr>
-        <td colspan="3" style="background-color: #b5dcb3">
+        <td style="background-color: #eef" width="100">
+            <a href="../actor/actor.html"><h2>Актёр</h2></a>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="background-color: #eee" width="100">
+            <a href="../producer/producer.html"><h2>Продюсер</h2></a>
+        </td>
+    </tr>
+
+    <tr>
+        <td colspan="2" style="background-color: #b5dcb3">
             © Leonid Ignatov
         </td>
     </tr>
