--- a/producer/producer.html
+++ b/producer/producer.html
@@ -18,11 +18,9 @@
     <tr>
         <td style="background-color: #eee" width="100">
             <a href="../Task_2.html"><h2>Главная</h2></a>
-			<a href="../actor/actor.html"><h2>Актёр</h2></a>
-			<a href="../filmmaker/filmmaker.html"><h2>Режиссер</h2></a>
- 
+
         </td>
-        <td colspan="2" style="background-color: #ddd">
+        <td rowspan="3" style="background-color: #ddd">
             <h2>Продюссирование</h2>
 			<ul>
 				<li>2004 — 2005 — Настоящие дикари (англ.), сериал (англ. Complete Savages)</li>
@@ -30,9 +28,20 @@
 			</ul>
         </td>
     </tr>
+    <tr>
+        <td style="background-color: #eef" width="100">
+            <a href="../actor/actor.html"><h2>Актёр</h2></a>
+        </td>
+    </tr>
 
     <tr>
-        <td colspan="3" style="background-color: #b5dcb3">
+        <td style="background-color: #eee" width="100">
+            <a href="../filmmaker/filmmaker.html"><h2>Режиссер</h2></a>
+        </td>
+    </tr>
+
+    <tr>
+        <td colspan="2" style="background-color: #b5dcb3">
             © Leonid Ignatov
         </td>
     </tr>
