--- a/task2get.html
+++ b/task2get.html
@@ -13,18 +13,18 @@
             <table>
                 <tr>
                     <td>
-                        First name
+                        <label for="firstname">First name</label>
                     </td>
                     <td>
-                        <input type="text" name="firstname">
+                        <input type="text" name="firstname" id="firstname">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Surname
+                        <label for="surname">Surname</label>
                     </td>
                     <td>
-                        <input type="text" name="surname">
+                        <input type="text" name="surname" id = "surname">
                     </td>
                 </tr>
                 <tr>
@@ -44,26 +44,26 @@
             <table>
                 <tr>
                     <td>
-                        Site
+                        <label for="site">Site</label>
                     </td>
                     <td>
-                        <input type="text" name="site">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        E-Mail
-                    </td>
-                    <td>
-                        <input type="email" name="email">
+                        <input type="text" name="site" id="site">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        Phone
+                        <label for="email">E-Mail</label>
                     </td>
                     <td>
-                        <input type="text" name="phone">
+                        <input type="email" name="email" id="email">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="phone">Phone</label>
+                    </td>
+                    <td>
+                        <input type="text" name="phone" id="phone">
                     </td>
                 </tr>
             </table>
