--- a/task2post.html
+++ b/task2post.html
@@ -6,68 +6,68 @@
     <title>Task 2</title>
 </head>
 <body>
-<h1>Registration form</h1>
-<form action="http://httpbin.org/post" method="post" id="form1">
-    <fieldset>
-        <legend>Personal information</legend>
-        <table>
-            <tr>
-                <td>
-                    First name
-                </td>
-                <td>
-                    <input type="text" name="firstname">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Surname
-                </td>
-                <td>
-                    <input type="text" name="surname">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Sex
-                </td>
-                <td>
-                    <input type="radio" name="sex" value="male" checked>Male
-                    <br>
-                    <input type="radio" name="sex" value="female">Female
-                </td>
-            </tr>
-        </table>
+    <h1>Registration form</h1>
+    <form action="http://httpbin.org/post" method="post" id="form1">
+        <fieldset>
+            <legend>Personal information</legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="firstname">First name</label>
+                    </td>
+                    <td>
+                        <input type="text" name="firstname" id="firstname">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="surname">Surname</label>
+                    </td>
+                    <td>
+                        <input type="text" name="surname" id = "surname">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Sex
+                    </td>
+                    <td>
+                        <input type="radio" name="sex" value="male" checked>Male
+                        <br>
+                        <input type="radio" name="sex" value="female">Female
+                    </td>
+                </tr>
+            </table>
     </fieldset>
-    <fieldset>
-        <legend>Contact Information</legend>
-        <table>
-            <tr>
-                <td>
-                    Site
-                </td>
-                <td>
-                    <input type="text" name="site">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    E-Mail
-                </td>
-                <td>
-                    <input type="email" name="email">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Phone
-                </td>
-                <td>
-                    <input type="text" name="phone">
-                </td>
-            </tr>
-        </table>
-    </fieldset>
+        <fieldset>
+            <legend>Contact Information</legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="site">Site</label>
+                    </td>
+                    <td>
+                        <input type="text" name="site" id="site">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="email">E-Mail</label>
+                    </td>
+                    <td>
+                        <input type="email" name="email" id="email">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="phone">Phone</label>
+                    </td>
+                    <td>
+                        <input type="text" name="phone" id="phone">
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
 </form>
 <br>
 <input type="submit" form="form1">
