--- a/task3.html
+++ b/task3.html
@@ -7,8 +7,8 @@
 <body>
     <h1>My search</h1>
     <form action="http://yandex.ru/search" name="search" method="get">
-        I want to find
-        <input type="text" name="text"/>
+        <label>I want to find
+        <input type="text" name="text"/></label>
         <input type="image" alt="find" src="http://iconshow.me/media/images/ui/ios7-icons/png/16/search_1.png">
     </form>
 </body>
